Added titles to diaryentry encounter list buttons

--- a/src/app/components/utility/diary-entry-encounter-list/diary-entry-encounter-list.component.html
+++ b/src/app/components/utility/diary-entry-encounter-list/diary-entry-encounter-list.component.html
@@ -14,11 +14,11 @@
         <div class="col-md-3 col-0"></div>
         <div class="col-md-6 d-flex justify-content-around">
             <div class="btn btn-secondary" (click)="toggleEncounterCreateState(-1)">
-                <i class="fa fa-3x fa-plus pointer"></i>
+                <i class="fa fa-3x fa-plus pointer" title="Add Encounter to Diaryentry"></i>
             </div>
 
             <div class="btn btn-secondary" [ngClass]="{'disabled': cutEncounterIndex == null}" (click)="insertExcisedEncounter(-1 + 1)">
-                <i class="fas fa-3x fa-file-import pointer"></i>
+                <i class="fas fa-3x fa-file-import pointer" title="Insert Cut Encounter"></i>
             </div>
         </div>
         <div class="col-md-3 col-0"></div>
@@ -48,11 +48,11 @@
                 <div class="col-md-3 col-0"></div>
                 <div class="col-md-6 d-flex justify-content-around">
                     <div class="btn btn-secondary" (click)="toggleEncounterCreateState(encounterIndex)">
-                        <i class="fa fa-3x fa-plus pointer"></i>
+                        <i class="fa fa-3x fa-plus pointer" title="Add Encounter to Diaryentry"></i>
                     </div>
                     <!-- insertExcisedEncounter has encounterIndex+1 because the insertion is supposed to happen AFTER this encounter, not before it -->
                     <div class="btn btn-secondary" [ngClass]="{'disabled': cutEncounterIndex == null}" (click)="insertExcisedEncounter(encounterIndex + 1)">
-                        <i class="fas fa-3x fa-file-import pointer"></i>
+                        <i class="fas fa-3x fa-file-import pointer" title="Insert Cut Encounter"></i>
                     </div>
                 </div>
                 <div class="col-md-3 col-0"></div>
