--- a/src/app/components/articles/spells/spells.component.html
+++ b/src/app/components/articles/spells/spells.component.html
@@ -17,7 +17,7 @@
                     </div>
                 </strong>
 
-                <i [ngClass]="{'fa icon float-right': true, 'fa-plus': panelIsOpen(i), 'fa-minus': !panelIsOpen(i)}"></i>
+                <i [ngClass]="{'fa icon float-right': true, 'fa-chevron-down': panelIsOpen(i), 'fa-chevron-up': !panelIsOpen(i)}"></i>
             </h5>
 
             <!-- Rules Panel Content -->
