--- a/src/app/components/utility/location-accordion/location-accordion.component.html
+++ b/src/app/components/utility/location-accordion/location-accordion.component.html
@@ -15,7 +15,7 @@
                     {{ location.name }} 
                 </a>
             </span>
-            <i [ngClass]="{'fa float-right icon': true,'fa-plus': !panelIsOpen(i),'fa-minus': panelIsOpen(i)}"></i>
+            <i [ngClass]="{'fa float-right icon': true,'fa-chevron-down': !panelIsOpen(i),'fa-chevron-up': panelIsOpen(i)}"></i>
         </ng-template>
 
         <!-- Body -->
