Removed overlay large headings for mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -455,6 +455,10 @@ formly-validation-message{
 		margin-top: 2rem;
 	}
 
+	h1{
+		font-size: 1.5rem !important;
+	}
+
 	.hide-on-mobile{
 		display: none;
 	}
