--- a/src/app/components/articles/rules/rules.component.scss
+++ b/src/app/components/articles/rules/rules.component.scss
@@ -2,3 +2,24 @@
     background-color: white;
     margin: 0 0 1rem 0;
 }
+
+.expand .btn{
+    transition: visibility 0.2s;
+    visibility: hidden;
+}
+
+.expand:hover .btn{
+    visibility: visible;
+    padding: 0.75rem 1.5rem;
+}
+
+.expand{
+    transition: height 0.2s;
+    display: flex;
+    align-items: center;
+    height: 2rem;
+}
+
+.expand:hover{
+    height: 8rem;
+}
