--- a/src/app/components/articles/spells/spells.component.scss
+++ b/src/app/components/articles/spells/spells.component.scss
@@ -43,3 +43,24 @@ table{
         font-size: medium;
     }
 }
+
+.expand .btn{
+    transition: visibility 0.2s;
+    visibility: hidden;
+}
+
+.expand:hover .btn{
+    visibility: visible;
+    padding: 0.75rem 1.5rem;
+}
+
+.expand{
+    transition: height 0.2s;
+    display: flex;
+    align-items: center;
+    height: 2rem;
+}
+
+.expand:hover{
+    height: 8rem;
+}
