Overhauled visuals of spells and rules for better element alignment

--- a/src/app/components/articles/spells/spells.component.html
+++ b/src/app/components/articles/spells/spells.component.html
@@ -13,7 +13,7 @@
         </div>
 
 
-        <!-- Insert new Rule -->
+        <!-- Insert new Spell -->
         <div class="expand row justify-content-center">
             <div class="btn btn-secondary" (click)="addSpell()">
                 <i class="fa fa-3x fa-plus pointer" title="Add Spell"></i>
