--- a/src/app/components/utility/spell/spell.component.html
+++ b/src/app/components/utility/spell/spell.component.html
@@ -1,7 +1,7 @@
 <!-- Spells -->
 <div class="card mb-3 px-4 pt-3 pb-1">
     <!-- Spell Panel Heading -->
-    <h5 class="pointer justify-content-between d-flex align-items-center" (click)="togglePanel()">
+    <h5 class="pointer col-12 justify-content-between d-flex align-items-center" (click)="togglePanel()">
         <!-- Spell Title -->
         <strong>
             {{spell.name}}
@@ -15,89 +15,92 @@
         <i [ngClass]="{'fa icon float-right': true, 'fa-chevron-down': !isPanelOpen, 'fa-chevron-up': isPanelOpen}"></i>
     </h5>
 
-    <!-- Separator + Edit Toggler -->
-    <div class="w-100 mb-3" *ngIf="isPanelOpen">
-        <!-- Separating line -->
-        <hr class="whiteline">
-
-        <!-- Edit Toggler -->
-        <div class="btn btn-secondary encounter-hidden float-right" (click)="toggleFormState()">
-            <i class="fa fa-pencil" *ngIf="!isCreateState && !isUpdateState"></i>
-            <i class="fa fa-times" *ngIf="isCreateState || isUpdateState"></i>
-        </div>
-    </div>
 
     <!-- Spell Panel Content -->
-    <div class="col-12" [ngbCollapse]="!isPanelOpen">
+    <div class="mb-3" [ngbCollapse]="!isPanelOpen">
+        <div class="col-12">
+            <!-- Separating line -->
+            <hr class="white-separator mb-2">
 
-        <!-- Spell Table -->
-        <div *ngIf="!isCreateState && !isUpdateState; else formField">
-            <div class="row">
-                <!-- Spell Level -->
-                <div class="col-md-3 col-6 d-flex flex-column spell">
-                    <strong class="border-bottom-grey column-heading">SPELL LEVEL</strong>
-                    <div class="column-body" *ngIf="spell.spell_level"> {{ (spell.spell_level) }} </div>
-                    <div class="column-body placeholder" *ngIf="!spell.spell_level"> Placeholder </div>
+            <div class="w-100 mb-3">
+                <!-- Heading -->
+                <h4 class="d-inline"> {{ spell.name }}</h4>
+
+                <!-- Edit Toggler -->
+                <div class="btn btn-secondary float-right" (click)="toggleFormState()">
+                    <i class="fa fa-pencil" *ngIf="!isCreateState && !isUpdateState"></i>
+                    <i class="fa fa-times" *ngIf="isCreateState || isUpdateState"></i>
                 </div>
-                <!-- Casting Time -->
-                <div class="col-md-3 col-6 d-flex flex-column spell">
-                    <strong class="border-bottom-grey column-heading">CASTING TIME</strong>
-                    <div class="column-body" *ngIf="spell.casting_time"> {{ (spell.casting_time) }} </div>
-                    <div class="column-body placeholder" *ngIf="!spell.casting_time"> Placeholder </div>
-                </div>
-                <!-- Range/Area -->
-                <div class="col-md-3 col-6 d-flex flex-column spell">
-                    <strong class="border-bottom-grey column-heading">RANGE/AREA</strong>
-                    <div class="column-body" *ngIf="spell.range"> {{ (spell.range) }} </div>
-                    <div class="column-body placeholder" *ngIf="!spell.range"> Placeholder </div>
-                </div>
-                <!-- Components -->
-                <div class="col-md-3 col-6 d-flex flex-column spell">
-                    <strong class="border-bottom-grey column-heading">COMPONENTS</strong>
-                    <div class="column-body" *ngIf="spell.components"> {{ (spell.components) }} </div>
-                    <div class="column-body placeholder" *ngIf="!spell.components"> Placeholder </div>
-                </div>
-                <!-- Duration -->
-                <div class="col-md-3 col-6 d-flex flex-column spell">
-                    <strong class="border-bottom-grey column-heading">DURATION</strong>
-                    <div class="column-body" *ngIf="spell.duration"> {{ (spell.duration) }} </div>
-                    <div class="column-body placeholder" *ngIf="!spell.duration"> Placeholder </div>
-                </div>
-                <!-- School -->
-                <div class="col-md-3 col-6 d-flex flex-column spell">
-                    <strong class="border-bottom-grey column-heading">SCHOOL</strong>
-                    <div class="column-body" *ngIf="spell.school"> {{ (spell.school) }} </div>
-                    <div class="column-body placeholder" *ngIf="!spell.school"> Placeholder </div>
-                </div>
-                <!-- Attack/Save -->
-                <div class="col-md-3 col-6 d-flex flex-column spell">
-                    <strong class="border-bottom-grey column-heading">ATTACK/SAVE</strong>
-                    <div class="column-body" *ngIf="spell.saving_throw"> {{ (spell.saving_throw) }} </div>
-                    <div class="column-body placeholder" *ngIf="!spell.saving_throw"> Placeholder </div>
-                </div>
-                <!-- Damage/Effect -->
-                <div class="col-md-3 col-6 d-flex flex-column spell">
-                    <strong class="border-bottom-grey column-heading">EFFECT</strong>
-                    <div class="column-body" *ngIf="spell.damage"> {{ (spell.damage) }} </div>
-                    <div class="column-body placeholder" *ngIf="!spell.damage"> Placeholder </div>
-                </div>
-                <!-- Description -->
-                <div class="col-12 d-flex flex-column spell">
-                    <strong class="border-bottom-grey column-heading">DESCRIPTION</strong>
-                    <div class="column-body" [innerHTML]="spell.description"></div>
-                </div>
-                
             </div>
 
-            <div class="row mb-3">
-                <div class="col">
-                    <app-delete-toggle
-                    [deleteMessage] = "'Delete this Spell ?'"
-                    (deleteEvent) = "onDelete()"
-                    ></app-delete-toggle>
+            <!-- Spell Table -->
+            <div class="container" *ngIf="!isCreateState && !isUpdateState; else formField">
+                <div class="row">
+                    <!-- Spell Level -->
+                    <div class="col-md-3 col-6 d-flex flex-column spell">
+                        <strong class="border-bottom-grey column-heading">SPELL LEVEL</strong>
+                        <div class="column-body" *ngIf="spell.spell_level"> {{ (spell.spell_level) }} </div>
+                        <div class="column-body placeholder" *ngIf="!spell.spell_level"> Placeholder </div>
+                    </div>
+                    <!-- Casting Time -->
+                    <div class="col-md-3 col-6 d-flex flex-column spell">
+                        <strong class="border-bottom-grey column-heading">CASTING TIME</strong>
+                        <div class="column-body" *ngIf="spell.casting_time"> {{ (spell.casting_time) }} </div>
+                        <div class="column-body placeholder" *ngIf="!spell.casting_time"> Placeholder </div>
+                    </div>
+                    <!-- Range/Area -->
+                    <div class="col-md-3 col-6 d-flex flex-column spell">
+                        <strong class="border-bottom-grey column-heading">RANGE/AREA</strong>
+                        <div class="column-body" *ngIf="spell.range"> {{ (spell.range) }} </div>
+                        <div class="column-body placeholder" *ngIf="!spell.range"> Placeholder </div>
+                    </div>
+                    <!-- Components -->
+                    <div class="col-md-3 col-6 d-flex flex-column spell">
+                        <strong class="border-bottom-grey column-heading">COMPONENTS</strong>
+                        <div class="column-body" *ngIf="spell.components"> {{ (spell.components) }} </div>
+                        <div class="column-body placeholder" *ngIf="!spell.components"> Placeholder </div>
+                    </div>
+                    <!-- Duration -->
+                    <div class="col-md-3 col-6 d-flex flex-column spell">
+                        <strong class="border-bottom-grey column-heading">DURATION</strong>
+                        <div class="column-body" *ngIf="spell.duration"> {{ (spell.duration) }} </div>
+                        <div class="column-body placeholder" *ngIf="!spell.duration"> Placeholder </div>
+                    </div>
+                    <!-- School -->
+                    <div class="col-md-3 col-6 d-flex flex-column spell">
+                        <strong class="border-bottom-grey column-heading">SCHOOL</strong>
+                        <div class="column-body" *ngIf="spell.school"> {{ (spell.school) }} </div>
+                        <div class="column-body placeholder" *ngIf="!spell.school"> Placeholder </div>
+                    </div>
+                    <!-- Attack/Save -->
+                    <div class="col-md-3 col-6 d-flex flex-column spell">
+                        <strong class="border-bottom-grey column-heading">ATTACK/SAVE</strong>
+                        <div class="column-body" *ngIf="spell.saving_throw"> {{ (spell.saving_throw) }} </div>
+                        <div class="column-body placeholder" *ngIf="!spell.saving_throw"> Placeholder </div>
+                    </div>
+                    <!-- Damage/Effect -->
+                    <div class="col-md-3 col-6 d-flex flex-column spell">
+                        <strong class="border-bottom-grey column-heading">EFFECT</strong>
+                        <div class="column-body" *ngIf="spell.damage"> {{ (spell.damage) }} </div>
+                        <div class="column-body placeholder" *ngIf="!spell.damage"> Placeholder </div>
+                    </div>
+                    <!-- Description -->
+                    <div class="col-12 d-flex flex-column spell">
+                        <strong class="border-bottom-grey column-heading">DESCRIPTION</strong>
+                        <div class="column-body" [innerHTML]="spell.description"></div>
+                    </div>
+                    
                 </div>
             </div>
+        
+            <!-- Delete Toggler -->
+            <app-delete-toggle
+            [deleteMessage] = "'Delete this Spell ?'"
+            (deleteEvent) = "onDelete()"
+            ></app-delete-toggle>
         </div>
+
+
     </div>
 </div>
 
