--- a/src/app/components/utility/spell/spell.component.html
+++ b/src/app/components/utility/spell/spell.component.html
@@ -22,8 +22,8 @@
             <!-- Separating line -->
             <hr class="white-separator mb-2">
 
-            <div class="w-100 mb-3">
-                <!-- Heading -->
+            <!-- Spell Heading -->
+            <div class="w-100 mb-4">
                 <h4 class="d-inline"> {{ spell.name }}</h4>
 
                 <!-- Edit Toggler -->
