--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -44,7 +44,7 @@
 
             <!-- Spells -->
             <li class="nav-item">
-                <a routerLink="{{ routingService.getRoutePath('spells')}}" class="nav-link"> 
+                <a routerLink="{{ routingService.getRoutePath('spells')}}" class="nav-link align-items-center">
                     <span class="nav-link-text mr-3">Spells</span> 
                     <i class="fa fa-bolt fa-2x" aria-hidden="true"></i>
                 </a>
