--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,8 @@
-<div class="main">
+<div 
+class="main" 
+[ngClass]="{'animate__animated animate__zoomOutDown' : hasConfirmedLogin}"
+(animationend) = "routeToStartPage()"
+>
     <article>
         <h1>Log In</h1>
         <div class="mb-3 text-warning">{{extraMessage}}</div>
