--- a/src/app/components/utility/image-gallery/image-gallery.component.scss
+++ b/src/app/components/utility/image-gallery/image-gallery.component.scss
@@ -1,3 +1,7 @@
+.animate__animated.animate__slideInRight, .animate__animated.animate__slideInLeft{
+    --animate-duration: 0.35s;
+}
+
 .main-image{
     display: block;
 }
