--- a/src/app/components/utility/timestamp/timestamp.component.scss
+++ b/src/app/components/utility/timestamp/timestamp.component.scss
@@ -1,3 +1,7 @@
+.animate__animated.animate__slideInRight{
+    --animate-duration: 0.2s;
+}
+
 .delete-timestamp{
     transition: opacity 0.2s;
     opacity: 0;
