--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,6 +1,6 @@
 <div 
-class="main" 
-[ngClass]="{'animate__animated animate__zoomOutDown' : hasConfirmedLogin}"
+class="main animate__animated" 
+[ngClass]="{'animate__zoomOutDown' : hasConfirmedLogin, 'animate__backInUp': !hasConfirmedLogin}"
 (animationend) = "routeToStartPage()"
 >
     <article>
