--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,7 @@
 //Animations
 @import '~animate.css/animate.min';
 
-.main.animate__animated.animate__zoomIn{
+.main.animate__animated{
 	--animate-duration: 0.35s;
 }
 
