Added generalized fading out animation to all cards with ".main" in router outlet

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@ id="background-div"
 class="d-flex justify-content-center align-items-center pt-4 pb-4"
 (click)="routeToHome($event); closeNavbarMenu()"
 >
-    <router-outlet (click)="closeNavbarMenu()"></router-outlet>
+    <router-outlet #routerOutlet (click)="closeNavbarMenu()"></router-outlet>
 </div>
 
 <!-- BG -->
