--- a/src/app/components/articles/article-overview/article-overview.component.html
+++ b/src/app/components/articles/article-overview/article-overview.component.html
@@ -1,4 +1,4 @@
-<div class="main" [ngClass]="{'animate__animated animate__zoomIn': !isInitialAnimationFinished}" (transitionend)="isInitialAnimationFinished = true">
+<div class="main" #overviewMainCard>
     <article *ngIf="listItems; else loading" class="pr-4 pl-4 container">
         <!-- Heading -->
         <div class="row">
