--- a/src/app/components/articles/map/map.component.html
+++ b/src/app/components/articles/map/map.component.html
@@ -1,4 +1,4 @@
-<div class="main" [ngClass]="{'animate__animated animate__zoomIn': !isInitialAnimationFinished}" (transitionend)="isInitialAnimationFinished = true">
+<div class="main" #mapMainCard>
     <article *ngIf="maps && currentMap; else loading" class="container">
         <!-- Heading -->
         <app-edit-toggle></app-edit-toggle>
