--- a/src/app/components/utility/timestamp/timestamp.component.html
+++ b/src/app/components/utility/timestamp/timestamp.component.html
@@ -18,12 +18,12 @@
 </div>
 
 <ng-template #deleteRequest>
-    <div class="row animate__animated" [ngClass]="{'animate__slideInRight': isInDeleteState}">
+    <div class="row animate__animated" [ngClass] = "{'animate__slideInRight': isInDeleteState}" #timestampDeleteElement>
         <div class="col-lg-2 col-0"></div>
         <div class="col-lg-7 col-12 timestamp-box">
             <span class="ml-2">Delete Timestamp?</span> 
             <div class="btn btn-danger btn-sm mx-3" (click)="deleteTimestamp()">Delete</div>
-            <div class="btn btn-secondary btn-sm" (click)="toggleDeleteState()">Cancel</div> 
+            <div class="btn btn-secondary btn-sm" (click)="onCancelClick()">Cancel</div> 
         </div>
     </div>
 </ng-template>
