--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,8 @@
 //Animations
 @import '~animate.css/animate.min';
 
-.main.animate__animated{
+//TODO: Remove superfluous CSS from animated elements where --animate-duration is set to 0.35s
+.animate__animated{
 	--animate-duration: 0.35s;
 }
 
