--- a/src/app/components/utility/rule/rule.component.html
+++ b/src/app/components/utility/rule/rule.component.html
@@ -1,4 +1,4 @@
-<div class="card row mb-3 px-4 pt-3 pb-1">
+<div class="card row mb-3 px-4 pt-3 pb-1" [ngClass] = "{'animate__animated animate__fadeInUp': isCreateState}" #ruleCard>
     <!-- Rules Panel Heading -->
     <h5 class="pointer col-12 justify-content-between d-flex align-items-center" (click)="togglePanel()"> 
         <span>{{ rule.name }}</span>
