--- a/src/app/components/utility/spell/spell.component.html
+++ b/src/app/components/utility/spell/spell.component.html
@@ -1,5 +1,5 @@
 <!-- Spells -->
-<div class="card mb-3 px-4 pt-3 pb-1">
+<div class="card mb-3 px-4 pt-3 pb-1" #spellCard [ngClass] = "{'animate__animated animate__fadeInUp': isCreateState}">
     <!-- Spell Panel Heading -->
     <h5 class="pointer col-12 justify-content-between d-flex align-items-center" (click)="togglePanel()">
         <!-- Spell Title -->
