Added button to route back to home from admin page

--- a/src/app/components/articles/admin/admin.component.html
+++ b/src/app/components/articles/admin/admin.component.html
@@ -126,6 +126,8 @@
 
         </div>
 
+        <div class="btn btn-secondary" routerLink="{{routingService.getRoutePath('home1')}}">Back To Home</div>
+
     </article>
 
     <!-- Loading Spinner -->
