Added way to disable all those groups that the user already has

--- a/src/app/components/utility/user-row/user-row.component.html
+++ b/src/app/components/utility/user-row/user-row.component.html
@@ -55,7 +55,7 @@
                 <option 
                 *ngFor="let group of groups" 
                 value="{{group.id}}" 
-                [attr.disabled]="false ? true : null"
+                [attr.disabled]="isUserInGroup(group.id) ? true : null"
                 >
                     {{group.name}}
                 </option>
